--- a/templates/suppliers/supplier_cashflow.html
+++ b/templates/suppliers/supplier_cashflow.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <div class="container-fluid" data-aos="fade-in">
     
     <div class="d-flex justify-content-between align-items-center mb-4">
