--- a/templates/suppliers/supplier_cashflow_add.html
+++ b/templates/suppliers/supplier_cashflow_add.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <div class="container" data-aos="fade-up" style="max-width: 800px;">
     
     <div class="d-flex align-items-center mb-4">
